--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </ul>
   <p>or enter your own prompt:</p>
   <textarea id="input" placeholder="Enter some prompt and press Enter."></textarea>
-  <button id="submit-button">submit</button>
+  <button id="submit-button">Submit</button>
   <div id="output"></div>
   <div id="error" hidden></div>
   <div id="slideshow" hidden></div>
